<resources>
    <string name="app_name">MusicApp</string>
    <string name="NombreCancion">Song2</string>
    <string name="NombreGrupo">BLUR</string>
    <string name="FinalCancion">3:00</string>
    <string name="InicioCancion">1:00</string>
    <string name="BotonCancionAnterior">CancionAnterior</string>
    <string name="BotonCancionSiguiente">CancionSiguiente</string>
    <string name="BotonCompartir">Compartir</string>
    <string name="BotonPausar">Pausar</string>
    <string name="BotonContinuar">Continuar</string>
    <string name="BotonListado">Listado</string>
    <string name="BotonLetra">Letra</string>
</resources>